Final working version. All tests passed.